<?xml version="1.0"?>
<package format="2">
  <name>neato_gazebo</name>
  <version>0.1.0</version>
  <description>The neato_gazebo ros2 package</description>
  <license>Apache 2.0</license>
  <maintainer email="pieter.vanzutven@segula.nl">Pieter van Zutven</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>neato_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
