<?xml version="1.0"?>
<package format="2">
  <name>neato_gazebo</name>
  <version>0.1.0</version>
  <description>The neato_gazebo ros2 package</description>
  <license>Apache 2.0</license>
  <maintainer email="pieter.vanzutven@segula.nl">Pieter van Zutven</maintainer>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>nav_msgs</depend>
  <depend>neato_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcpputils</depend>
  <depend>tf2_ros</depend>

  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>neato_description</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
